@@ -15,6 +15,8 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+ common/object.c: don't use global errmsg variable for errors, just LOG() them.
+---
 Remove static buffer from create_template_pathname().
  common/map.c
  include/libproto.h
